samples/_failures_safe/1761310436_2ede80_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_29acff75.c: In function ‘main’:
./samples/SAFE/__tmp_29acff75.c:157:9: error: expected declaration or statement at end of input
  157 |         if (strlen(input) == 0) {
      |         ^~
./samples/SAFE/__tmp_29acff75.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_29acff75.c:157:9: error: expected declaration or statement at end of input
